[package]
name = "taap"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "TAAP is an argument parser made for rust, with ease of use in mind"
homepage = "https://github.com/SpamixOfficial/taap-rs"
repository = "https://github.com/SpamixOfficial/taap-rs"
readme = "README.md"

[dependencies]
