[package]
name = "taap"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "TAAP is an argument parser made for rust, with ease of use in mind"
homepage = "https://github.com/SpamixOfficial/taap-rs"
repository = "https://github.com/SpamixOfficial/taap-rs"
readme = "README.md"
keywords = ["arguments", "parser"]
categories = ["command-line-interface"]
exclude = ["/examples", "/target", "TODO.md"]

[dependencies]
